# System-Resources-Monitor

./: CMakeLists.txt  README.md
include/: cpu_stats.hpp  graphics.hpp
src/: cpu_stats.cpp  graphics.cpp  main.cpp
